challenges/cloud-proxy/terraform/ec2.tf
#IAM Role
resource "aws_iam_role" "banking-WAF-Role" {
  name               = "banking-WAF-Role-${var.cgid}"
  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
EOF
  tags = {
    Name     = "banking-WAF-Role-${var.cgid}"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}

#IAM Role Policy Attachment
resource "aws_iam_role_policy_attachment" "banking-WAF-Role-policy-attachment-s3" {
  role       = aws_iam_role.banking-WAF-Role.name
  policy_arn = data.aws_iam_policy.s3-full-access.arn
}

#IAM Instance Profile
resource "aws_iam_instance_profile" "ec2-instance-profile" {
  name = "ec2-instance-profile-${var.cgid}"
  role = aws_iam_role.banking-WAF-Role.name
}

#Security Groups
resource "aws_security_group" "ec2-ssh-security-group" {
  name        = "ec2-ssh-${var.cgid}"
  description = "Security Group for EC2 Instance over SSH"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }
  tags = {
    Name     = "ec2-ssh-${var.cgid}"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}
resource "aws_security_group" "ec2-http-security-group" {
  name        = "ec2-http-${var.cgid}"
  description = "Security Group for EC2 Instance over HTTP"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }
  tags = {
    Name     = "ec2-http-${var.cgid}"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}
#AWS Key Pair
resource "aws_key_pair" "ec2-key-pair" {
  key_name   = "ec2-key-pair-${var.cgid}"
  public_key = file(var.ssh-public-key-for-ec2)
}
#EC2 Instance
resource "aws_instance" "ec2-vulnerable-proxy-server" {
  ami                         = "ami-0a313d6098716f372"
  instance_type               = "t2.micro"
  iam_instance_profile        = aws_iam_instance_profile.ec2-instance-profile.name
  subnet_id                   = aws_subnet.public-subnet-1.id
  associate_public_ip_address = true
  vpc_security_group_ids = [
    "${aws_security_group.ec2-ssh-security-group.id}",
    "${aws_security_group.ec2-http-security-group.id}"
  ]
  key_name = aws_key_pair.ec2-key-pair.key_name
  root_block_device {
    volume_type           = "gp2"
    volume_size           = 8
    delete_on_termination = true
  }
  provisioner "file" {
    source      = "../assets/proxy.com"
    destination = "/home/ubuntu/proxy.com"
    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = file(var.ssh-private-key-for-ec2)
      host        = self.public_ip
    }
  }
  user_data = <<-EOF
        #!/bin/bash
        apt-get update
        apt-get install -y nginx
        ufw allow 'Nginx HTTP'
        cp /home/ubuntu/proxy.com /etc/nginx/sites-enabled/proxy.com
        rm /etc/nginx/sites-enabled/default
        systemctl restart nginx
        EOF
  volume_tags = {
    Name     = "EC2 Instance Root Device"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
  tags = {
    Name     = "ec2-vulnerable-proxy-server-${var.cgid}"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}
